[package]
name = "vulkanalia_tut"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
lazy_static = "1.4.0"
log = "0.4.17"
nalgebra-glm = "0.17.0"
png = "0.17.6"
pretty_env_logger = "0.4.0"
thiserror = "1.0.35"
tobj = "3.2.3"
# "provisional" required because of macOS dependency on `VK_KHR_portability_subset`
vulkanalia = { version = "0.15.0", features = ["libloading", "window", "provisional"] }
winit = "0.27.3"

